Not displaying correctly when using dark mode

--- a/src/app/pages/xcash-details/xcash-details.component.sass
+++ b/src/app/pages/xcash-details/xcash-details.component.sass
@@ -2,7 +2,11 @@
     display: flex
     flex-direction: column
     height: 100%
-    background: #f5f5f5
+    background-color: #f5f5f5 !important
+    color: #111827 !important
+
+.card *
+  color: inherit !important
 
 .cart-footer
     margin-top: auto
