--- a/src/styles.sass
+++ b/src/styles.sass
@@ -16,6 +16,7 @@ $navbar-breakpoint: 770px // Change the breakpoint from 1024px
   font-weight: 500 !important
 
 html, body
+  color-scheme: light
   font-weight: 400 !important
 
 @import "datatables.net-dt/css/dataTables.dataTables.css"
